<resources>
    <string name="app_name" translatable="false">S1 Next Goose</string>
    <string name="app_icon_content_desc">App icon</string>
    <string name="leak_canary_display_activity_label" translatable="false">S1 Leaks</string>
    <string name="intent_title_which_view_application">Open with</string>
    <string name="message_chooser_no_applications">No apps can perform this action</string>
    <string name="action_login">Sign in</string>
    <string name="avatar_content_desc">Avatar</string>
    <string name="picture_content_desc">Picture</string>
    <string name="dialog_message_login_prompt">Please sign in first.</string>
    <string name="dialog_button_text_done">Done</string>
    <string name="dialog_button_text_go">Go</string>
    <string name="dialog_button_text_jump">Jump</string>
    <string name="message_network_error">There was a network error</string>
    <string name="message_server_error">Unable to connect to the server, please try again later.</string>
    <string name="message_unknown_error">Unknown error occurred</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_top_background_content_desc">background</string>
    <string name="drawer_avatar_content_desc">User avatar</string>
    <string name="dialog_message_log_out">Sign out?</string>
    <string name="dialog_button_text_log_out">Sign out</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu_account_new">Create account</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_page_jump">Jump to page</string>
    <string name="menu_browser">Open in browser</string>
    <string name="menu_thread_go">Go to thread</string>
    <string name="menu_sub_forums" translatable="false">子版块</string>
    <string name="menu_favourites_add">Add to favourites</string>
    <string name="menu_link">Link</string>
    <string name="menu_share">Share</string>
    <string name="menu_title_share">Share via</string>
    <string name="menu_thread_attachment">Attachment</string>
    <string name="menu_emoticon">Emoticon</string>
    <string name="menu_keyboard">Keyboard</string>
    <string name="menu_send">Send</string>
    <string name="menu_download">Download</string>
    <string name="menu_blacklist_add">Add to blacklist</string>
    <string name="menu_search">Search</string>
    <string name="activity_label_login" translatable="false">@string/action_login</string>
    <string name="prompt_username">Username/UID/Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_field_required">Can\'t leave this empty</string>
    <string name="dialog_progress_message_login">Signing in…</string>
    <string name="toolbar_spinner_drop_down_all_forums_item_title" translatable="false">全部</string>
    <string name="thread_permission_hint" translatable="false">阅读权限</string>
    <string name="dialog_button_text_add">Add</string>
    <string name="dialog_progress_message_favourites_add">Adding…</string>
    <string name="prompt_remark">Remark</string>
    <string name="snackbar_action_retry">Retry</string>
    <string name="dialog_message_invalid_or_unsupported_link">Invalid or unsupported link.</string>
    <string name="dialog_button_text_use_a_different_app">Use a different app</string>
    <string name="dialog_message_processing">Processing…</string>
    <string name="dialog_message_quote_not_found">This post could not be found.</string>
    <string name="prompt_thread_link_or_id">Thread link/ID</string>
    <string name="error_field_invalid_or_unsupported_thread_link_or_id">Invalid or unsupported link/ID format</string>
    <string name="message_thread_link_copy">Thread link copied to clipboard</string>
    <string name="reply_activity_title_prefix" translatable="false">"回复主题 - "</string>
    <string name="reply_activity_quote_title_prefix" translatable="false">"引用#%1$s - "</string>
    <string name="prompt_reply">Write something…</string>
    <string name="prompt_title">Write title…</string>
    <string name="signature">— from %1$s of &lt;a href=\"https://play.google.com/store/apps/details?id=me.ykrank.s1next\">S1 Next Goose&lt;/a></string>
    <string name="signature_in_reply">— from %1$s of [url=https://play.google.com/store/apps/details?id=me.ykrank.s1next]S1 Next Goose[/url]</string>
    <string name="dialog_progress_message_reply">Replying…</string>
    <string name="dialog_message_reply_discard_prompt">Do you want to discard this replies?</string>
    <string name="dialog_message_text_discard">Discard</string>
    <string name="emoticon_face" translatable="false">麻将脸</string>
    <string name="emoticon_carton" translatable="false">动漫</string>
    <string name="emoticon_animal" translatable="false">动物</string>
    <string name="emoticon_device" translatable="false">硬件</string>
    <string name="emoticon_goose" translatable="false">鹅</string>
    <string name="emoticon_bundam" translatable="false">高达</string>
    <string name="snackbar_action_downloading">Downloading…</string>
    <string name="pref_general">General</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_default_value" translatable="false">0</string>
    <string name="pref_font_size">Font size</string>
    <string name="pref_font_size_default_value" translatable="false">1.0</string>
    <string name="pref_signature">Signature</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_downloads">Downloads</string>
    <string name="pref_downloads_summary">Avatar &amp; Image</string>
    <string name="pref_blacklists">Blacklist</string>
    <string name="pref_blacklists_summary">Manage</string>
    <string name="pref_download_total_cache_size">Total cache size</string>
    <string name="pref_download_total_cache_size_default_value" translatable="false">1</string>
    <string name="pref_avatar">Avatar</string>
    <string name="pref_download_avatars_strategy_default_value" translatable="false">2</string>
    <string name="pref_avatar_resolution">Resolution</string>
    <string name="pref_avatar_resolution_strategy_default_value" translatable="false">1</string>
    <string name="pref_avatar_cache_invalidation_interval">Cache invalidation interval</string>
    <string name="pref_avatar_cache_invalidation_interval_default_value" translatable="false">1</string>
    <string name="pref_image">Image</string>
    <string name="pref_download_images_strategy_default_value" translatable="false">1</string>
    <string name="pref_theme_entries_0">AfternoonTea</string>
    <string name="pref_theme_entries_1">Light</string>
    <string name="pref_theme_entries_2">Amber</string>
    <string name="pref_theme_entries_3">Green</string>
    <string name="pref_theme_entries_4">Light blue</string>
    <string name="pref_theme_entries_5">Purple</string>
    <string name="pref_theme_entries_6">Dark</string>
    <string name="pref_theme_entries_7">Night mode</string>
    <string name="pref_theme_entries_8">Night mode (AMOLED version)</string>
    <string name="pref_font_size_entries_1">Small</string>
    <string name="pref_font_size_entries_2">Normal</string>
    <string name="pref_font_size_entries_3">Large</string>
    <string name="pref_font_size_entries_4">Huge</string>
    <string name="pref_download_avatars_entries_1">Do not download avatars</string>
    <string name="pref_download_avatars_entries_2">Download avatars over Wi-Fi only</string>
    <string name="pref_download_avatars_entries_3">Download avatars at any time</string>
    <string name="pref_avatar_resolution_entries_1">Low resolution (Any time)</string>
    <string name="pref_avatar_resolution_entries_2">High resolution (Wi-Fi)</string>
    <string name="pref_avatar_resolution_entries_3">High resolution (Any time)</string>
    <string name="pref_download_cache_invalidation_interval_entries_1">Every day</string>
    <string name="pref_download_cache_invalidation_interval_entries_2">Every week</string>
    <string name="pref_download_cache_invalidation_interval_entries_3">Every month</string>
    <string name="pref_download_images_entries_1">Do not download images</string>
    <string name="pref_download_images_entries_2">Download images over Wi-Fi only</string>
    <string name="pref_download_images_entries_3">Download images at any time</string>
    <string name="pref_net_host_ip_default_value">220.196.42.172</string>
    <string name="menu_view_in_google_play_store">View in Google Play Store</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="pref_libraries">Libraries</string>
    <string name="pref_files">Files</string>
    <string name="menu_version_info">Version info</string>
    <string name="version">Version %1$s</string>
    <string name="copyright" translatable="false">&#169;2016 ykrank</string>
    <string name="user_in_blacklist">In blacklist</string>
    <string name="blacklist_authorid">Author id</string>
    <string name="blacklist_author_name">Author name</string>
    <string name="blacklist_forum_flag">Forum flag</string>
    <string name="blacklist_post_flag">Post flag</string>
    <string name="blacklist_add_time">Add time</string>
    <string name="blacklist_flag_normal">Normal</string>
    <string name="blacklist_flag_hide">Hide</string>
    <string name="blacklist_flag_del">Del</string>
    <string name="menu_blacklist_remove">Remove from blacklist</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_all">All</string>
    <string name="menu_clear">Clear</string>
    <string name="blacklist_refresh_warn">Blacklist changed, please refresh</string>
    <string name="blacklist_hide_forum">Hide forum</string>
    <string name="blacklist_hide_post">Hide post</string>
    <string name="prompt_author_id">Author id</string>
    <string name="prompt_author_name">Author name</string>
    <string name="menu_blacklist_edit">Edit blacklist</string>
    <string name="blacklist_add_success">Blacklist add success</string>
    <string name="blacklist_remove_success">Blacklist remove success</string>
    <string name="gallery_transition" translatable="false">gallery_transition</string>
    <string name="pref_post_read_progress">Read  progress</string>
    <string name="pref_post_read_progress_summary"><![CDATA[Auto save & load]]></string>
    <string name="pref_read_progress_save_auto">Auto save</string>
    <string name="pref_read_progress_load_auto">Auto load</string>
    <string name="menu_save_progress">Save read progress</string>
    <string name="menu_load_progress">Load last read progress</string>
    <string name="save_read_progress_success">Save read progress success</string>
    <string name="pref_backup_backup">Backup</string>
    <string name="pref_backup_restore">Restore</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_backup_summary"><![CDATA[Backup & restore]]></string>
    <string name="message_backup_success">Backup success</string>
    <string name="menu_new_thread">New thread</string>
    <string name="login_in_web">Login in web</string>
    <string name="menu_random_image">Random image</string>
    <string name="user_combat_effectiveness">Combat effectiveness</string>
    <string name="score_region">Score region</string>
    <string name="score_today_left">Today left score</string>
    <string name="score_reason">Score reason</string>
    <string name="prompt_reason">Write reason</string>
    <string name="notice_author">Notice author</string>
    <string name="score_reason_example">Score reason example</string>
    <string name="menu_large_image_mode">Large image mode</string>
</resources>