<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:persistent="false"
    tools:context="cl.monsoon.s1next.view.fragment.GeneralPreferenceFragment">

    <PreferenceCategory
        android:persistent="false"
        android:title="@string/pref_general">

        <cl.monsoon.s1next.widget.ListPreferenceCompat
            android:defaultValue="@string/pref_theme_default_value"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_entry_values"
            android:key="pref_key_theme"
            android:summary="%s"
            android:title="@string/pref_theme" />

        <cl.monsoon.s1next.widget.ListPreferenceCompat
            android:defaultValue="@string/pref_font_size_default_value"
            android:entries="@array/pref_font_size_entries"
            android:entryValues="@array/pref_font_size_entry_values"
            android:key="pref_key_font_size"
            android:summary="%s"
            android:title="@string/pref_font_size" />

        <SwitchPreference
            android:defaultValue="@bool/pref_signature_default_value"
            android:key="pref_key_signature"
            android:title="@string/pref_signature" />

    </PreferenceCategory>

    <PreferenceCategory
        android:persistent="false"
        android:title="@string/pref_advanced">

        <Preference
            android:key="pref_key_downloads"
            android:persistent="false"
            android:summary="@string/pref_downloads_summary"
            android:title="@string/pref_downloads" />

    </PreferenceCategory>

</PreferenceScreen>
