<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ykrank.s1next.view.fragment.BaseFragment">
    <item
        android:id="@+id/menu_add"
        android:orderInCategory="@integer/menu_add"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="@integer/menu_edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="@integer/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_all"
        android:orderInCategory="@integer/menu_all"
        android:title="@string/menu_all" />
    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="@integer/menu_clear"
        android:title="@string/menu_clear" />
</menu>
