<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cl.monsoon.s1next.view.fragment.PostListFragment">
    <item
        android:id="@+id/menu_thread_attachment"
        android:icon="?attr/iconMenuThreadAttachment"
        android:orderInCategory="21"
        android:title="@string/menu_thread_attachment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_favourites_add"
        android:orderInCategory="22"
        android:title="@string/menu_favourites_add"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_link"
        android:orderInCategory="23"
        android:title="@string/menu_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="24"
        android:title="@string/menu_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_browser"
        android:orderInCategory="25"
        android:title="@string/menu_browser"
        app:showAsAction="never" />
</menu>
