<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cl.monsoon.s1next.view.activity.HelpActivity">
    <item
        android:id="@+id/menu_view_in_google_play_store"
        android:orderInCategory="1"
        android:title="@string/menu_view_in_google_play_store"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_open_source_licenses"
        android:orderInCategory="2"
        android:title="@string/open_source_licenses"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_version_info"
        android:orderInCategory="3"
        android:title="@string/menu_version_info"
        app:showAsAction="never" />
</menu>
