<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ykrank.s1next.view.activity.GalleryActivity">
    <item
        android:id="@+id/menu_download"
        android:orderInCategory="20"
        android:title="@string/menu_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_large_image_mode"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="21"
        android:title="@string/menu_large_image_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_browser"
        android:orderInCategory="22"
        android:title="@string/menu_browser"
        app:showAsAction="never" />
</menu>
