<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ykrank.s1next.view.activity.ThreadListActivity">
    <item
        android:id="@+id/menu_sub_forums"
        android:orderInCategory="11"
        android:title="@string/menu_sub_forums"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_new_thread"
        android:icon="@drawable/ic_create_content_24dp"
        android:orderInCategory="21"
        android:title="@string/menu_new_thread"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_random_image"
        android:orderInCategory="25"
        android:title="@string/menu_random_image"
        android:visible="false"
        app:showAsAction="never" />
</menu>
