<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ykrank.s1next.view.fragment.NewRateFragment">

    <data>

        <variable
            name="model"
            type="me.ykrank.s1next.viewmodel.NewRateViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_caption"
                    android:text="@string/score_region" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:text="@{@string/score_region_format(model.info.minScore, model.info.maxScore)}"
                    tools:text="1 ~ 2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/text_size_caption"
                    android:text="@string/score_today_left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:text="@{model.info.totalScore}"
                    tools:text="10" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="?attr/divisionBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/text_size_caption"
                android:text="@string/user_combat_effectiveness" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:layout_marginRight="@dimen/spacing_normal"
                android:layout_gravity="end" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_caption"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:text="@string/score_reason" />

        <EditText
            android:id="@+id/et_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/prompt_reason"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_author"
            android:enabled="@{!model.info.disabled}"
            android:checked="@{model.info.checked}" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorAccent"
            android:textSize="@dimen/text_size_caption"
            android:layout_margin="@dimen/spacing_normal"
            android:text="@string/score_reason_example" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</layout>
