<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ykrank.s1next.view.dialog.BlacklistDialogFragment">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="blackListViewModel"
            type="me.ykrank.s1next.viewmodel.BlackListViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="@dimen/dialog_padding"
            android:paddingLeft="@dimen/dialog_padding"
            android:paddingTop="@dimen/dialog_padding"
            android:paddingEnd="@dimen/dialog_padding"
            android:paddingRight="@dimen/dialog_padding"
            android:paddingBottom="@dimen/dialog_padding_bottom">

            <!-- Fix the NullPointerException on MEIZU below 8.0 due to TextInputEditText's getHint() doesn't match mHint. (https://github.com/android-in-china/Compatibility/issues/11)-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_author_id"
                app:hintAnimationEnabled="true">


                <!-- hint = "" is necessary -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/blacklist_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:imeActionId="@integer/ime_action_id"
                    android:imeActionLabel="@string/dialog_button_text_go"
                    android:inputType="number"
                    android:text="@{String.valueOf(blackListViewModel.blacklist.authorId)}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:editable="@{blackListViewModel.blacklist.authorId == 0}" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Fix the NullPointerException on MEIZU below 8.0 due to TextInputEditText's getHint() doesn't match mHint. (https://github.com/android-in-china/Compatibility/issues/11)-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_author_name"
                app:hintAnimationEnabled="true">

                <!-- hint = "" is necessary -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/blacklist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:imeActionId="@integer/ime_action_id"
                    android:imeActionLabel="@string/dialog_button_text_go"
                    android:inputType="text"
                    android:text="@{blackListViewModel.blacklist.author}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:editable="@{TextUtils.isEmpty(blackListViewModel.blacklist.author)}" />

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/radio_group_forum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/dialog_switch_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_padding"
                    android:text="@string/blacklist_forum_flag"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_forum_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_normal" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_forum_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_hide" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_forum_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_del" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radio_group_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/dialog_switch_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_padding"
                    android:text="@string/blacklist_post_flag"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_post_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_normal" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_post_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_hide" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radio_post_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blacklist_flag_del" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</layout>
